Pod consumes the content of the ConfigMap as environment variables

--- a/23-JAN-2025/configmap/configmap/myconfigmap.yaml
+++ b/23-JAN-2025/configmap/configmap/myconfigmap.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: myconfigmap
 data:
   firstname: rajeev
   lastname: singh
   middlename: kumar
-kind: ConfigMap
-metadata:
-  creationTimestamp: null
-  name: myconfigmap
+  username: k8s-admin
+  access_level: "1"
