--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 *.env
+cleaned-k8s-repo.git/
+cleaned-repo.git/
+multi-node-cluster1-control-plane/
+multi-node-cluster1-worker/
+multi-node-cluster1-worker2/
+multi-node-cluster1-worker3/
